# alpha-cli

./: README.md  pyproject.toml
cli/commands/: mine.py  setup.py
config/: settings.py
core/brain/: fetcher.py  simulator.py
core/llm/: client.py  prompt.py  schema.py
core/storage/: cache.py  db.py
core/validation/: semantic.py  syntax.py
src/alpha_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/alpha_cli/cli/: main.py
src/alpha_cli/cli/commands/: results.py  setup.py
src/alpha_cli/config/: settings.py
src/alpha_cli/core/brain/: auth.py  fetcher.py  models.py  simulator.py
src/alpha_cli/core/engine/: decision.py  optimizer.py  orchestrator.py
src/alpha_cli/core/llm/: client.py  oauth.py  prompt.py
src/alpha_cli/core/storage/: memory.py
src/alpha_cli/core/validation/: corrector.py
