[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-cli"
version = "0.1.0"
description = "Cloud LLM-Powered WorldQuant Brain Alpha Mining CLI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]",
    "rich",
    "litellm",
    "requests",
    "pydantic",
    "cryptography",
    "keyring",
    "python-dotenv",
]

[project.scripts]
alpha-cli = "alpha_cli.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alpha_cli*"]
